# devin

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
src/: apfel.rs  ask.rs  chat.rs  cli.rs  diff.rs  error.rs  fs_context.rs  indexer.rs  lib.rs  main.rs  manifest.rs  memory.rs  parser.rs  paths.rs  slow.rs  tui.rs
tests/: indexer_test.rs  manifest_test.rs  parser_test.rs
