[package]
name = "devin"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "devin"
path = "src/main.rs"

[[bin]]
name = "devin-mcp"
path = "src/bin/mcp_server.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
ratatui = "0.29"
crossterm = "0.28"
textwrap = "0.16"
regex = "1"
glob = "0.3"
rmcp = { version = "1.3.0", features = ["server", "transport-io", "macros"] }
tokio = { version = "1.51.0", features = ["full"] }
schemars = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
